--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -31,7 +31,8 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".activity.toast_snackbar.ToastSnackBarActivity" />
+        <activity android:name=".activity.toast_snackbar.ToastSnackBarActivity"
+            android:windowSoftInputMode="adjustResize"/>
         <activity android:name=".activity.second.FragmentShowActivity" />
         <activity android:name=".activity.recyclerview.RecyclerViewActivity" />
         <activity android:name=".activity.vibrator.VibratorActivity" />
