--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -42,6 +42,7 @@
         <activity android:name=".activity.display.DisplayActivity" />
         <activity android:name=".activity.battery.BatteryActivity" />
         <activity android:name=".activity.network.NetworkActivity" />
+        <activity android:name=".activity.location.LocationActivity" />
     </application>
 
 </manifest>
